SONARTEXT-520 Reduce overall memory consumption of the Analyzer (#722)
GitOrigin-RevId: e5daf5dc6976b076b3c3a7f39031b58e377a721c